--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gestalt": "^0.103.0",
     "next": "9.0.5",
     "react": "16.9.0",
+    "react-contenteditable": "^3.3.2",
     "react-dom": "16.9.0",
     "react-mathjax3": "0.0.3"
   }
