--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "16.9.0",
     "react-contenteditable": "^3.3.2",
     "react-dom": "16.9.0",
+    "react-html-parser": "^2.0.2",
     "react-mathjax3": "0.0.3"
   }
 }
