--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-contenteditable": "^3.3.2",
     "react-dom": "16.9.0",
     "react-html-parser": "^2.0.2",
+    "react-icons": "^3.7.0",
     "react-mathjax3": "0.0.3"
   }
 }
